crates/analyzer/tests/snapshots/errors__duplicate_typedef_in_module.snap
---
source: crates/analyzer/tests/errors.rs
expression: "error_string(&path, test_files::fixture(path))"

---
error: a type named "bar" has already been defined
  ┌─ compile_errors/duplicate_typedef_in_module.fe:2:6
  │
2 │ type bar = u8
  │      ^^^ `bar` first defined here
3 │ 
4 │ type bar = u8
  │      --- `bar` redefined here

error: function name `bar` conflicts with previously defined type
  ┌─ compile_errors/duplicate_typedef_in_module.fe:2:6
  │
2 │ type bar = u8
  │      ^^^ `bar` first defined here
  ·
8 │     pub fn bar():
  │            --- `bar` redefined here


